--- a/styles/main.css
+++ b/styles/main.css
@@ -1,3 +1,22 @@
+:root {
+  --main-bg-color: rgb(0, 0, 0);
+}
+
+@keyframes fade-in {
+  0% {
+    opacity: 0;
+    visibility: hidden;
+    transform: scale(0) rotate(0deg);
+  }
+  100% {
+    opacity: 1;
+    visibility: visible;
+    border-radius: 50%;
+    border: 10px solid var(--main-bg-color);
+    background-color: red;
+    transform: scale(1) rotate(720deg);
+  }
+}
 body {
   display: flex;
   justify-content: center;
@@ -7,11 +26,17 @@ body {
 }
 
 div {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 200px;
   height: 200px;
   background: gray;
-  border: 1px dotted black;
   margin: 10px;
+  animation-name: fade-in;
+  animation-duration: 3s;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
 }
 
 /*# sourceMappingURL=main.css.map */
